// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The password input field should match snapshot with text hidden by default 1`] = `
<div>
  <div
    class="css-kjafn5"
  >
    <input
      class="css-1ru8d9z"
      data-testid="password-input"
      type="password"
    />
    <div
      class="css-8ueujo"
    >
      <button
        class="css-13h65yf"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`The password input field should match snapshot with text shown 1`] = `
<div>
  <div
    class="css-kjafn5"
  >
    <input
      class="css-1ru8d9z"
      data-testid="password-input"
      type="text"
    />
    <div
      class="css-8ueujo"
    >
      <button
        class="css-13h65yf"
        type="button"
      >
        Hide
      </button>
    </div>
  </div>
</div>
`;

exports[`The password input field should match snapshots 1`] = `
<div>
  <div
    class="css-kjafn5"
  >
    <input
      class="css-1ru8d9z"
      data-testid="password-input"
      type="password"
    />
    <div
      class="css-8ueujo"
    >
      <button
        class="css-13h65yf"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;
